Continuation: Home page

--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -52,7 +52,7 @@ nav {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    background-color: #FFF9E6;
+    // background-color: #FFF9E6;
 
     @include md{
         background-color: transparent;
