--- a/client/src/components/searchBar/search.scss
+++ b/client/src/components/searchBar/search.scss
@@ -1,6 +1,70 @@
-.search{
-    .type{
-        padding: 16px 36px;
-        border: 1px solid #999;
+@import "../../responsive.scss";
+
+.search {
+  .type {
+    button {
+      padding: 16px 36px;
+      border: 1px solid #999;
+      cursor: pointer;
+      background-color: white;
+      text-transform: capitalize;
+      border-bottom: none;
+
+      &.active {
+        background-color: black;
+        color: white;
+      }
+
+      &:first-child {
+        border-top-left-radius: 5px;
+        border-right: none;
+      }
+
+      &:last-child {
+        border-top-right-radius: 5px;
+        border-left: none;
+      }
     }
+  }
+
+  form {
+    border: 1px solid #999;
+    display: flex;
+    justify-content: space-between;
+    height: 64px;
+    gap: 5px;
+
+    @include sm{
+      flex-direction: column;
+    }
+
+    input {
+      border: none;
+      padding: 0px 10px;
+      width: 200px;
+
+      @include lg{
+        padding: 0px 5px;
+
+        &:nth-child(2),&:nth-child(3){
+          width: 140px;
+        }
+      }
+    }
+
+    button {
+      border: none;
+      cursor: pointer;
+      background-color: #ffbf00;
+      padding: 0 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      img {
+        width: 24px;
+        height: 24px;
+      }
+    }
+  }
 }
