--- a/client/src/components/searchBar/search.scss
+++ b/client/src/components/searchBar/search.scss
@@ -2,6 +2,7 @@
 
 .search {
   .type {
+
     button {
       padding: 16px 36px;
       border: 1px solid #999;
@@ -34,8 +35,9 @@
     height: 64px;
     gap: 5px;
 
-    @include sm{
+    @include sm {
       flex-direction: column;
+      border: none;
     }
 
     input {
@@ -43,12 +45,27 @@
       padding: 0px 10px;
       width: 200px;
 
-      @include lg{
+      @include lg {
         padding: 0px 5px;
 
-        &:nth-child(2),&:nth-child(3){
+        &:nth-child(2),
+        &:nth-child(3) {
           width: 140px;
         }
+      }
+
+      @include md {
+        width: auto;
+
+        &:nth-child(2),
+        &:nth-child(3) {
+          width: auto;
+        }
+      }
+
+      @include sm {
+        padding: 20px;
+        border: 1px solid #999;
       }
     }
 
@@ -60,6 +77,10 @@
       display: flex;
       align-items: center;
       justify-content: center;
+
+      @include sm {
+      padding: 10px;
+    }
 
       img {
         width: 24px;
