--- a/client/src/pages/list/list.scss
+++ b/client/src/pages/list/list.scss
@@ -1,3 +1,5 @@
+@import "../../responsive.scss";
+
 .listPage{
     display: flex;
     height: 100%;
@@ -7,7 +9,7 @@
         height: 100%;
 
         .wrapper{
-            padding-right: 50px;
+            padding-right: 10px;
             display: flex;
             flex-direction: column;
             gap: 50px;
@@ -19,6 +21,7 @@
 
     .map{
         flex: 2;
+        height: 100%;
         background-color: #fff9e6;
     }
 }
