--- a/client/src/pages/details/details.scss
+++ b/client/src/pages/details/details.scss
@@ -1,7 +1,17 @@
+@import "../../responsive.scss";
+
 .specifics{
     display: flex;
     height: 100%;
     overflow-y: scroll;
+
+    @include sm{
+        flex-direction: column;
+    }
+
+    @include md{
+        flex-direction: column;
+    }
 
     .details{
         flex: 3;
@@ -80,10 +90,98 @@
     .features{
         flex: 2;
         background-color: #fff9e6;
-        height: 100%;
+        height: max-content;
+        padding: 10px;
 
         .wrapper{
             padding: 0px 10px;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+
+            img{
+                width: 24px;
+                height: 24px;
+            }
+
+            .title{
+                font-weight: bold;
+                font-size: 18px;
+            }
+
+            .feature{
+                display: flex;
+                align-items: center;
+                gap: 10px;
+
+                .text{
+                    span{
+                        font-weight: bold;
+                         font-size: 14px;
+                    }
+
+                    p{
+                        font-size: 10px;
+                    }
+                }
+            }
+
+            .listVertical{
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                padding: 10px 5px;
+                background-color: white;
+                border-radius: 10px;
+            }
+
+            .listHorizontal{
+                display: flex;
+                justify-content: space-between;
+                padding: 10px 5px;
+                background-color: white;
+                border-radius: 10px;
+            }
+
+            .sizes{
+                display: flex;
+                justify-content: space-between;
+
+                .size{
+                    display: flex;
+                    align-items: center;
+                    gap: 5px;
+                    background-color: white;
+                    border-radius: 5px;
+                }
+            }
+
+            .map{
+                width: 100%;
+                height: 200px;
+            }
+
+            .buttons{
+                display: flex;
+                justify-content: space-between;
+
+                button{
+                    padding: 10px;
+                    display: flex;
+                    align-items: center;
+                    gap: 5px;
+                    background-color: white;
+                    border: 1px solid #ffbf00;
+                    border-radius: 5px;
+                    cursor: pointer;
+                    margin-top: 20px;
+
+                    img{
+                        width: 16px;
+                        height: 16px;
+                    }
+                }
+            }
         }
     }
 }
